src/css/components/_slide.css
.slide-object,
.slide-text {
  flex-grow: 0;
  flex-basis: 50%;
}
.slide-text {
  font-family: "Gotham Book", Arial;
  padding-top: 120px;
  padding-bottom: 80px;
}
.slide-text h2 {
  margin-bottom: 0px;
  font-weight: normal;
  font-size: 22px;
}
.slide-text h3 {
  font-weight: normal;
  font-size: 22px;
  margin-top: 0px;
  margin-bottom: 40px;
}
.slide-text p {
  font-size: 15px;
}
.instructions {
  width: 100%;
  height: 100%;
  position: absolute;
  top:-8rem;
  left: 0;
  background-color: black;
}
.instructions::before {
  content: '';
  background-color: #000;
  position: absolute;
	width: 100%;
	height: 100%;
}
.instructions img {
  margin-left: auto;
  margin-right: auto;
  position: relative;
}
.close-out {
  top: 50px;
  right: 50px;
  max-width: 10%;
}
.model-close.full-screen {
  display: block;
  text-align: right;
}
.slide-model.full-screen {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
}
.slide-model.full-screen img,
.slide-model .full-screen img {
  padding: 1rem;
}

@media all and (min-width: 1200px) {
  .slide-model {
    max-width: 650px;
  }
}

